Os modülüne geldim

--- a/15 ] İleri Seviye Modüller/1) Datetime.ipynb
+++ b/15 ] İleri Seviye Modüller/1) Datetime.ipynb
@@ -353,14 +353,14 @@
     "# simdi birthday i timestamp() metoduna vericez\n",
     "\n",
     "result = datetime.timestamp(birthday)   # ilgili tarih objesini saniye cinsinden bize verir\n",
-    "print(result) # NOT: bu saniye birthday tarihinden 1970 tarihi arası olan (bilgisayarların miladı) hesaplanmış saniyedir.\n",
+    "print(result) \n",
     "\n",
     "# bu sefer result'u (birthdayi değil) fromtimestamp() metoduna verirsek?\n",
     "\n",
     "result = datetime.fromtimestamp(result)\n",
     "print(result)       # saniye olan tarihi tekrar datetime a (tarih saatli hale) dönüştürdü\n",
     "\n",
-    "# bilgisayarların miladaı olan tarih için...\n",
+    "# bilgisayarların miladaı olan tarih için içine 0 koy\n",
     "result = datetime.fromtimestamp(0)\n",
     "print(result)\n",
     "\n"
@@ -421,11 +421,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-07-05 14:46:19.186321            simdi nin tarihi :)\n",
+      "2023-07-15 14:46:19.186321            10 gün eklendi\n",
+      "2025-07-04 14:56:19.186321            730 gün ve 10 dakika eklendi\n",
+      "2023-06-25 14:46:19.186321            10 gün azalttık\n"
+     ]
+    }
+   ],
    "source": [
-    "from datetime import timedelta"
+    "from datetime import datetime\n",
+    "simdi = datetime.now()\n",
+    "#--- önceki bilgiler yukarısı\n",
+    "\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "            # bugünün tarihini yazar (biliyosun)\n",
+    "print(f\"{simdi}            simdi nin tarihi :)\")\n",
+    "result = simdi + timedelta(days=10)     # simdi isimli tarihinin üstüne 10 gün ekledin\n",
+    "print(f\"{result}            10 gün eklendi\")\n",
+    "\n",
+    "# hem gün hem saniye cinsinden bir değer ekleyelim\n",
+    "result = simdi + timedelta(days=730, minutes=10)\n",
+    "print(f\"{result}            730 gün ve 10 dakika eklendi\")\n",
+    "\n",
+    "# bir de çıkaralım şimdi tarihinden\n",
+    "result = simdi - timedelta(days=10) # 10 gün azaltır\n",
+    "print(f\"{result}            10 gün azalttık\")"
    ]
   }
  ],
