--- a/15 ] İleri Seviye Modüller/2) Os Modülü.ipynb
+++ b/15 ] İleri Seviye Modüller/2) Os Modülü.ipynb
@@ -478,6 +478,322 @@
    "source": [
     "os.system(\"notepad.exe\")    # notepad programını açar"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        rename()        : klasör isim değiştirme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rename(\"newdirectory\", \"yeniklasörismi\")\n",
+    "\n",
+    "# şuanlık böyle bir klasör olmadığı için hata verir ama yapılışı böyle"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        rmdir()         : klasör silme\n",
+    "        removedirs()     : klasörleri alt klasörlerine kadar siler."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.rmdir(\"silineceklasor\")      # klasorü siler\n",
+    "os.removedirs(\"klasor1/klasor2/\")   # hepsini sildi hem klasor 1 hem de 2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### os modülü içerisinde bulunan path modülünü inceleyelim\n",
+    "\n",
+    "* path daha çok uzantılar üzerinde işlem yapıyor.\n",
+    "\n",
+    "        abspath()       : herhangi bir dosyanın tam konumunu verir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\Yasin\\VS Code\\BTK Akademi\\15 ] İleri Seviye Modüller\\1) Datetime.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "result = os.path.abspath(\"1) Datetime.ipynb\")   # herhangi bir dosyanın tam konumu\n",
+    "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        dirname()       : dosya yolu verilen dosyanın dizin ismini veriyor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:/Yasin/VS Code/BTK Akademi/15 ] İleri Seviye Modüller\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = os.path.dirname(\"d:/Yasin/VS Code/BTK Akademi/15 ] İleri Seviye Modüller/1) Datetime.ipynb\")\n",
+    "print(result)   # dikkat dosya yolundan dosya ismini çıkar geri kalan dizin ismi"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "eğer dosya ismini biliyorsak ve dosya yerini öğrenmek istiyosak ikisini birlikte şöyle kullanıcaz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\Yasin\\VS Code\\BTK Akademi\\15 ] İleri Seviye Modüller\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "result = os.path.dirname(os.path.abspath(\"1) Datetime.ipynb\"))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        exists()    : girdiğimiz dizin veya dosya ilgili konumda var mı? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "result = os.path.exists(\"1) Datetime.ipynb\")    # belirtilen dizinde bu dosya var mı diye sorar\n",
+    "print(result)   # true der terminal yani var."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Peki ulaştığımız bir alan klasör mü dosya mı nasıl öğrenicez?\n",
+    "\n",
+    "        isdir()     \n",
+    "        : vereceğimiz dosya yolu gerçekten de bir klasöre mi çıkıyor.(true & false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = os.path.isdir(\"d:\")\n",
+    "print(result)       # bir klasörmüş true dedi"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "        not: \n",
+    "\n",
+    "dosya: bir program veya resim v.b şeyler\n",
+    "klasör : bildiğimiz boş klasör v.b"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "                isfile()        : dosya mı ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = os.path.isfile(\"d:/Yasin\\VS Code/BTK Akademi/15 ] İleri Seviye Modüller/1) Datetime.ipynb\")\n",
+    "print(result)   # true dedi yani dosyadır"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "bir path & yol dizin oluşturalım\n",
+    "\n",
+    "        join()          : gerçek dosya oluşturmuyor sadece yol path oluşturuyor gibi bir şey"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\\deneme\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = os.path.join(\"C\\\\\", \"deneme\")\n",
+    "print(result)       # artık yol C/deneme dir. biz buraya dosya oluşturabiliriz artık sanırım"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* tam tersini yapalım path bilgilerini bölmek istersek?\n",
+    "        \n",
+    "        split()         # yukardakinin tersini yapıp böler sonucta bölünenleri de liste olarak gösterir bize terminalde"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('C', 'deneme')\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = os.path.split(\"C\\\\deneme\")\n",
+    "print(result)       # ayırdığı iki parçayı liste olarak liste halinde gösterir"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        splitext()      : ulaştığımız bir dosyanın ismiyle uzantısını ayırıyor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('1) Datetime', '.ipynb')\n",
+      "1) Datetime\n",
+      ".ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = os.path.splitext(\"1) Datetime.ipynb\")\n",
+    "print(result)   # dosya adı ve uzantısı ile ilgili değişik değişik işlemler yapmamıza olanak sağlıyor böyle şeyler\n",
+    "\n",
+    "# index ile sadece ismi veya sadece uzantıyı alabiliriz\n",
+    "print(result[0])    # ismi aldı sadece\n",
+    "print(result[1])   # sadece uzantıyı aldı"
+   ]
   }
  ],
  "metadata": {
