Json Uygulamaya kadar geldim

--- a/15 ] İleri Seviye Modüller/3) Re Modülü.ipynb
+++ b/15 ] İleri Seviye Modüller/3) Re Modülü.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -619,8 +619,141 @@
     }
    ],
    "source": [
+    "import re\n",
+    "str = \"Python Kursu: Python Programlama Rehberiniz | 40 saat\" \n",
+    "\n",
     "result = re.findall(\"sa?t\", str)\n",
     "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        {} - Karakter sayısını kontrol eder.\n",
+    "\n",
+    "            al{2} => a karakterinin arkasına 1 karakteri 2 kez tekrarlamalı.\n",
+    "            al{2,3} => a karakterinin arkadsına 1 karakteri en az 2 en fazla 3 kez tekrarlamalı\n",
+    "            [0-9]{2,4} => rakamlar arasında işlem ya ve en az 2 en çok 4 basamaklı sayıları döndür."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aa']\n",
+      "['40']\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.findall(\"a{2}\", str) # a dan iki tane olanları bana getir demek\n",
+    "print(result)\n",
+    "\n",
+    "result = re.findall(\"[0-9]{2}\", str) # rakamlar arasında ara ve iki basamaklı bul\n",
+    "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        | - (or işareti) alternatif seçeneklerden birinin gerçekleşmesi gerkeir.\n",
+    "\n",
+    "            a|b => a ya da b\n",
+    "\n",
+    "                cde =>      no match\n",
+    "                ade =>      1 match\n",
+    "                acdbea =>   3 match\n",
+    "\n",
+    "        () - gruplamak için kullanılır.\n",
+    "\n",
+    "            (a|b|c)xz => a,b,c karakterlerinin arkasına xz gelmelidir."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Buraya kadar hep <u>alphanumeric karakterlerle</u> olan arama işlemleriydi.\n",
+    "\n",
+    "Şimdi <u>özel karakterlerle</u> olan aramayı göreceğiz..\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        \\ - özel karakterleri aramamızı sağlar.\n",
+    "            \\$a => $ karakterinin arkasına a karakterini arar. Yani\n",
+    "                   $ regular exp. engine tarafından yorumlanmaz\n",
+    "\n",
+    "        \\A - Belirtilen karakter string in başında mı ?\n",
+    "             \\Athe => 'the' kelimesi string in başındamı\n",
+    "\n",
+    "        \\Z - Belirtilen karakter string in sonunda mı ?\n",
+    "             the\\Z => 'the' string in sonunda mı\n",
+    "\n",
+    "        \\b - Belirtilen karakter kelimenin başında ya da sonunda mı? (string içindeki her bir kelimede bakar herhangi bir kelimenin başında ya da sonunda mı?)\n",
+    "             \\bthe => 'the' kelimenin başında mı?\n",
+    "             the/b => 'the' kelimenin sonunda mı?\n",
+    "\n",
+    "örnekler yapalım"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Python']\n",
+      "['saat']\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = \"Python Kursu: Python Programlama Rehberiniz | 40 saat\" \n",
+    "\n",
+    "result = re.findall(\"\\APython\", str)    # string in en başında Python aradık.\n",
+    "print(result)\n",
+    "\n",
+    "result = re.findall(\"saat\\Z\", str)  # stringin en sonunda saat bilgisi aradı.\n",
+    "print(result)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        \\B - Belirtilen karakter kelimenin (cümledeki her bir kelimede arar) başında ya da sonunda değil mi?\n",
+    "             \\Bthe => 'the' kelimenin başında değil mi? (olmayanları gönderir)\n",
+    "             the\\B => 'the' kelimenin sonunda değil mi? (olmayanları gönderir)\n",
+    "\n",
+    "        \\d - [0-9] ile aynı anlama gelir yani rakamları arar.\n",
+    "             \\d => 12abc34\n",
+    "\n",
+    "        \\D - [^0-9] ile aynı anlama gelir yani rakam olmayanları arar\n",
+    "             \\D => 1ab44_50\n",
+    "\n",
+    "        \\s - Boşluk karakterlerini arar.\n",
+    "        \\S - Boşluk karakteri dışındakiler.\n",
+    "        \\w - Alfabetik karakterler, rakamlar ve alt çizgi karakteri.\n",
+    "        \\W - \\w nin tam tersi"
    ]
   }
  ],
