github rest api

--- a/15 ] İleri Seviye Modüller/4) Json Modülü.ipynb
+++ b/15 ] İleri Seviye Modüller/4) Json Modülü.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "işte json bu dönüşümleri yapmamızı sağlıyor\n",
     "\n",
-    "        loads()"
+    "        loads()         : json string ----> dict"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "        dumps()     :   dict ten json stringine çevirir"
+    "        dumps()     :   dict ----> json string"
    ]
   },
   {
