--- a/20 ] Pandas Veri Analizi/4) Pandas Farklı Dosya Tiplerinden Veri Okuma.ipynb
+++ b/20 ] Pandas Veri Analizi/4) Pandas Farklı Dosya Tiplerinden Veri Okuma.ipynb
@@ -4,20 +4,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Farklı Dosya Tiplerinden Veri Okuma"
+    "## farklı dosya türlerini okuyalım burada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        read_csv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   data = \"data2\"\n",
+      "0  meta = \"data3\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('sample.csv')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        read_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Name  Grade\n",
+      "0   Ahmet     50\n",
+      "1     Ali     60\n",
+      "2  Yağmur     70\n",
+      "3   Çınar     80\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_json('sample.json', encoding = \"UTF-8\")\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        read_excel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Name  Grade\n",
+      "0    Ali     80\n",
+      "1  Ahmet     70\n",
+      "2   Ayşe     50\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_excel('sample.xlsx')\n",
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
